# vietnam-number

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  README.rst  mytest123.py  pyproject.toml  setup.cfg  test.py
.github/workflows/: python-package.yml
tests/: test_couple.py  test_hundreds.py  test_large_number.py  test_single.py  test_tens.py  test_units.py  test_vietnam_number.py  test_w2n.py
tests/number2word/: test_hundreds.py  test_large_number.py  test_single.py  test_units.py
tests/word2number/: test_hundreds.py  test_large_number.py  test_single.py  test_units.py
vietnam_number/: __init__.py  data.py  hundreds.py  large_number.py  main.py  tens.py  units.py  w2n.py
vietnam_number/number2word/: __init__.py  data.py  hundreds.py  large_number.py  single.py  units.py
vietnam_number/number2word/utils/: base.py
vietnam_number/utils/: base.py  utils_hundreds.py  utils_large_number.py  utils_tens.py
vietnam_number/w2n/: couple.py  hundreds.py  large_number.py  single.py  tens.py
vietnam_number/word2number/: __init__.py  couple.py  data.py  hundreds.py  large_number.py  single.py  tens.py  units.py
vietnam_number/word2number/utils/: base.py  hundreds.py  large_number.py  tens.py
